--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>We parked the scooter and decided to explore the beach. We walked along the shoreline, feeling the soft sand beneath our feet and the cool water lapping at our ankles. We found a nice spot to sit and relax, watching the waves and the distant horizon. The sound of the ocean was soothing, and we spent some time just soaking in the peaceful ambiance.
 
                 As the day progressed, we decided to grab some snacks from a nearby vendor. We enjoyed some delicious local delicacies while chatting and laughing about our adventures so far. The food was a perfect complement to the beautiful setting, making the experience even more memorable.</p>
-                <h3 text-align: center;><a href="https://www.youtube.com/watch?v=ASqyMlhnjIg&t=469s">Click to Watch the Video</a></h3>
+                <h3 style="text-align: center;"><a href="https://www.youtube.com/watch?v=ASqyMlhnjIg&t=469s">Click to Watch the Video</a></h3>
         </div>
     </div>
     <footer>
